<resources>
    <string name="app_name">ShockShack</string>
    <string name="text_main_button_login_normal">쑉! 로그인</string>
    <string name="text_main_button_signup_normal">쑉! 회원가입</string>
    <string name="text_main_input_id">이메일</string>
    <string name="text_main_input_password">비밀번호</string>
    <string name="text_signup_title">회원가입</string>
    <string name="text_signup_button_submit">회원가입</string>
    <string name="text_signup_input_email">이메일</string>
    <string name="hint_signup_email_null">Email을 입력 해주세요.</string>
    <string name="hint_signup_email_pattern_invalid">Email 형식을 확인 해주세요.</string>
    <string name="hint_signup_password_null">비밀번호를 입력해주세요.</string>
    <string name="hint_signup_post_newmember_failed">회원등록에 실패하였습니다.</string>
    <string name="text_main_button_enqueue">입장!</string>
    <string name="text_login_input_invalid">존재하지 않는 아이디이거나, 비밀번호가 올바르지 않습니다.</string>
    <string name="text_login_google_failed">로그인에 실패하였습니다. 서버 연결 상태를 확인하세요.</string>
    <string name="text_hint_on_backpressed">뒤로가기 버튼을 한번 더 누르면 종료됩니다.</string>
    <string name="token_datetime_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="text_login_check_connection">인터넷 연결 상태를 확인하세요.</string>
    <string name="text_login_session_expired">세션이 만료되었습니다.</string>
    <string name="text_menu_main_drawer">로그아웃</string>
    <string name="pref_token_issued_date">tokenIssuedDateTime</string>
    <string name="pref_token_google">googleToken</string>
    <string name="pref_token_normal_access">accessToken</string>
    <string name="pref_token_normal_refresh">refreshToken</string>
    <string name="pref_token_normal_email">email</string>
    <string name="pref_name_login">loginInfo</string>
    <string name="pref_checkbox_autologin">isAutoLoginEnabled</string>
    <string name="text_main_logout">로그아웃 되었습니다.</string>
    <string name="text_chat_chatroomid_receive_failed">상대방과 연결에 실패했습니다. 다시 시도 해주세요.</string>
    <string name="text_chat_input_hint">메시지를 입력하세요.</string>
    <string name="text_chat_button_send">전송</string>
    <string name="text_main_enter_queue_failed">서버 연결에 실패하였습니다.</string>
    <string name="text_main_no_chat_user">상대를 찾을 수 없습니다.</string>
    <string name="text_chat_title">채팅</string>
    <string name="text_main_anim_enter_queue">상대를 찾는 중 입니다.</string>
    <string name="text_pref_file_name">loginInfo</string>
    <string name="text_chat_info_quit">상대방이 나갔습니다.</string>
    <string name="text_main_background">대화할 상대를 찾아보세요!</string>
    <string name="text_drawer_header_welcome">환영합니다!</string>
    <string name="text_main_current_user">현재 접속 중인</string>
    <string name="text_main_current_user_number">100명 중에서</string>
    <string name="text_main_current_user_if_connection_failed">다양한 사람들 중에서</string>
    <string name="url_credit_readme_md">https://github.com/gywnd2/android-chat/blob/main/README.md</string>
</resources>