<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/text_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_signup_title"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/input_text_signup_id"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="150dp" />

    <EditText
        android:id="@+id/input_text_signup_id"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_main_input_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_main_title"
        app:layout_constraintBottom_toTopOf="@id/input_text_signup_password"/>

    <EditText
        android:id="@+id/input_text_signup_password"
        android:inputType="textPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_main_input_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_text_signup_id"
        app:layout_constraintBottom_toTopOf="@id/button_signup_submit"/>

    <Button
        android:id="@+id/button_signup_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_signup_button_submit"
        app:layout_constraintTop_toBottomOf="@id/input_text_signup_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>