<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/layout_main_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar_main"
                layout="@layout/layout_toolbar_main"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <TextView
                        android:id="@+id/text_main_current_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_main_current_user"
                        android:textSize="25dp"/>

                    <TextView
                        android:id="@+id/text_main_current_user_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_main_current_user_number"
                        android:textStyle="bold"
                        android:textSize="35dp"/>

                    <ImageView
                        android:id="@+id/image_main_background"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/main_background"
                        android:layout_marginTop="30dp"/>

                    <TextView
                        android:id="@+id/text_main_background"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_main_background"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:layout_marginTop="30dp"/>

                    <Button
                        android:id="@+id/button_main_enqueue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_main_button_enqueue"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/button_enabled"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_main_anim_enter_queue"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:background="#CC000000"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:animateLayoutChanges="true">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/anim_main_enter_queue"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        app:lottie_rawRes="@raw/loading"
                        app:lottie_loop="true"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/text_main_anim_enter_queue"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            app:headerLayout="@layout/drawer_main_header"
            app:menu="@menu/drawer_main_navigation"
            app:theme="@style/NavigationDrawerMenuItemStyle"
            app:itemTextAppearance="@style/NavigationDrawerMenuItemStyle"
            android:fitsSystemWindows="false"/>

    </androidx.drawerlayout.widget.DrawerLayout>




</androidx.constraintlayout.widget.ConstraintLayout>